<resources>
    <string name="app_name">GTour</string>
    <string name="menu_ShowMap" translatable="false">Map</string>
    <string name="menu_Information" translatable="false">Information</string>
    <string name="menu_Settings" translatable="false">Settings</string>
    <string name="menu_Exit" translatable="false">Exit</string>
    <string name="menu_share" translatable="false">Share</string>
    <string name="Nickname">Your_Nickname</string>
    <string name="Gmail_of_User">Your_Email</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_google_maps">Map</string>
    <string name="menu_monuments" translatable="false">Monuments</string>

    <string-array name="TypesOfPlace">
        <item>Monument</item>
        <item>Park</item>
        <item>Place for a rest</item>
    </string-array>

    <string-array name="TypesOfSubject">
        <item>Information about error.</item>
        <item>Offer on upload the new place.</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="map">Map</string>
    <string name="parks">Parks</string>
    <string name="places_for_a_rest">Places for a rest</string>
    <string name="main">Main</string>
    <string name="send_message_to_developers">Send message to developers.</string>
    <string name="send_place_or_error">Send place or error.</string>
    <string name="other">Other</string>
    <string name="for_developers">For developers</string>
    <string name="add_place">Add place</string>
    <string name="profile">Profile</string>
    <string name="password">Password</string>
    <string name="welcome_to_gtour">Welcome to GTour</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="nickname">Nickname</string>
    <string name="sign_up">Sign up</string>
    <string name="welcome_back">Welcome back</string>
    <string name="not_all_fields_are_filled">Not all fields are filled</string>
    <string name="invalid_email_address">Invalid email address</string>
    <string name="satellite">Satellite</string>
</resources>
