<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/map">
        <menu>
            <item
                android:id="@+id/nav_monuments"
                android:title="@string/menu_monuments"
                android:icon="@drawable/ic_monuments_24dp"/>
            <item
                android:id="@+id/nav_Parks"
                android:title="@string/parks"
                android:icon="@drawable/ic_parks_24dp"/>
            <item
                android:id="@+id/nav_Places_for_a_rest"
                android:title="@string/places_for_a_rest"
                android:icon="@drawable/ic_place_rest_24dp"/>
            <item
                android:id="@+id/nav_ShowMap"
                android:title="@string/menu_ShowMap"
                android:icon="@drawable/ic_map_24dp"/>
            <item
                android:id="@+id/nav_Information"
                android:title="@string/menu_Information"
                android:icon="@drawable/ic_info"/>
            <item
                android:id="@+id/nav_sendErrorOrPlace"
                android:title="@string/send_place_or_error"
                android:icon="@drawable/ic_send_error_nav"/>
            <item
                android:id="@+id/nav_Share"
                android:title="@string/menu_share"
                android:icon="@drawable/ic_share_24dp"/>
            <item
                android:id="@+id/nav_Exit"
                android:title="@string/menu_Exit"
                android:icon="@drawable/ic_exit_to_app_black_24dp"/>
        </menu>
    </item>


</menu>