<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <EditText
        android:id="@+id/TextBox_Register_Nickname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:textColorHint="@color/hint"
        android:layout_marginHorizontal="25dp"
        android:background="@drawable/edittext_style"
        android:hint="@string/nickname"
        android:inputType="textPersonName"
        android:textStyle="bold"
        android:textColor="@color/text_colour"
        android:textSize="15sp"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/TextBox_Register_Password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:textColorHint="@color/hint"
        android:layout_marginHorizontal="25dp"
        android:textStyle="bold"
        android:textColor="@color/text_colour"
        android:background="@drawable/edittext_style"
        android:hint="@string/password"
        android:textSize="15sp"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/TextBox_Register_Email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/edittext_style"
        android:hint="Email"
        android:textColorHint="@color/hint"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="25dp"
        android:inputType="textEmailAddress"
        android:textSize="15sp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textColor="@color/text_colour" />

    <Button
        android:id="@+id/Button_Register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="25dp"
        android:background="@drawable/button_style"
        android:text="@string/sign_up"
        android:layout_marginTop="20dp"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textColor="@color/background"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/sign_up_textView_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Already have an account? Log in"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/text_colour"
        android:layout_marginTop="15dp"
        android:drawableRight="@drawable/arrow_end_log_in"
        android:drawableEnd="@drawable/arrow_end_log_in" />

</LinearLayout>